[package]
name = "qsv-dateparser"
version = "0.4.0"
authors = ["Joel Natividad <joel@datHere.com>"]
description = "Parse dates in string formats that are commonly used. Optimized for qsv."
readme = "README.md"
homepage = "https://github.com/jqnatividad/belt/tree/main/dateparser"
repository = "https://github.com/jqnatividad/belt/tree/main/dateparser"
keywords = ["date", "time", "datetime", "parser", "parse"]
license = "MIT"
edition = "2021"

[dependencies]
anyhow = "1.0"
chrono = "0.4"
once_cell = "1"
regex = { version = "1.5", default-features = false, features = ["std", "perf"] }

[dev-dependencies]
chrono-tz = "0.6"
criterion = { version = "0.3.4", features = ["html_reports"] }

[[bench]]
name = "parse"
harness = false
