[package]
name        = "qsv-dateparser"
version     = "0.8.1"
authors     = ["Joel Natividad <joel@datHere.com>"]
description = "Parse dates in string formats that are commonly used. Optimized for qsv."
readme      = "README.md"
homepage    = "https://github.com/jqnatividad/belt/tree/main/dateparser"
repository  = "https://github.com/jqnatividad/belt/tree/main/dateparser"
keywords    = ["date", "time", "datetime", "parser", "parse"]
license     = "MIT"
edition     = "2021"

[dependencies]
anyhow = "1.0"
chrono = { version = "=0.4.24", default-features = false, features = [
    "clock",
    "std",
] }
once_cell = { version = "1.17", features = ["parking_lot"] }
parking_lot = { version = "0.12", features = ["hardware-lock-elision"] }
regex = { version = "1.8", default-features = false, features = [
    "std",
    "perf",
] }

[dev-dependencies]
chrono-tz = "0.8"
criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
name    = "parse"
harness = false
